# Emosonic-Server

./: .gitignore  AGENTS.md  Dockerfile  MANIFEST.in  README.md  ci-requirements.txt  config.sample  mood_scene_playlists_product_goal.md  package-lock.json  package.json  requirements.txt  run_supysonic.py  setup.cfg
.github/: pull_request_template.md
docs/: emo_websocket_implementation_guide.md  emo_websocket_protocol_v1.md  emosonic_strict_v2_deployment.rst  emosonic_strict_v2_r8_client_migration_guide.md  emosonic_strict_v2_server_change_note.md  emosonic_web_player_goal.md  emosonic_web_strict_v2.rst  flutter_2026-04-05_registration_and_playback_commands.md  flutter_broadcast_playback_v1.md  flutter_effective_at_playback_v2.md  flutter_emo_socketio_integration.md  flutter_follow_playback_v1.md  index.rst  recommendation_agent_observability.md  recommendation_feedback_backend_implementation.md  server_recommendation_feedback_handoff.md
ref/: 2026-07-01-server-effective-at-playback.md  2026-07-08-playback-context-handoff-refactor.zh (1).md  2026-07-09-playback-context-v2-review-fixes.zh.md  2026-07-09-playback-context-v2-strict-architecture.REVISED.zh.md  2026-07-09-playback-context-v2-strict-architecture.zh.md  emosonic_strict_v2_protocol_metadata_goal.md  emosonic_strict_v2_server_change_note.md  emosonic_strict_v2_socketio_server_contract.md  emosonic_strict_v2_socketio_server_contract_r5_change_note.md  manifest.json  playback_context_v2_handoff_stabilization_goal.md  server-authoritative-playback-sync.md  track_metadata_application_goal_v2.md  track_metadata_enrichment_goal_v3.md
script/: collect_emo_strict_v2_r7_evidence.py  emo_ws_demo.py  serve_emo_web_strict_v2_acceptance.py  verify_emo_strict_v2_ears.py  verify_emo_strict_v2_packaging.py
specs/: emosonic_strict_v2_socketio_server_contract.md
supysonic/: cli.py  config.py  db.py  home_smart_cards.py  llm_client.py  mood_scene_playlist_service.py  mood_scene_playlists.py  natural_language_track_search.py  recommend.py  recommendation_agent.py  recommendation_agent_cache.py  recommendation_agent_session.py  recommendation_feedback.py  scheduler.py  similar_tracks.py  track_metadata_filter.py  track_metadata_quality.py  user_listening_profile.py  watcher.py  web.py
tests/: compose.emo_migrations.yml  emo_legacy_suite.py  testbase.py
(+203 files in other folders)
