# Supysonic server
# Copyright (C) 2013-2021 AlbinoGeek
# Copyright (C) 2025 jsdfhasuh and contributors
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

[metadata]
name = Emosonic Server
version = attr: supysonic.VERSION
url = https://supysonic.readthedocs.io
download_url = https://github.com/jsdfhasuh/supysonic
author = jsdfhasuh and contributors
author_email = jsdfhasuh@users.noreply.github.com
license = GNU AGPLv3
license_file = LICENSE
description = Self-hosted music streaming and operations platform forked from Supysonic
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Sound/Audio

[options]
python_requires = >=3.7
install_requires =
    click
    spotipy
    flask >=0.11
    peewee
    Pillow >=9.1.0
    requests >=1.0.0
    mediafile
    pymysql
    beautifulsoup4
    lxml
    watchdog >=0.8.0
    zipstream-ng >=1.1.0, <2.0.0
    flask-socketio >=5.3.0
    python-socketio >=5.11.0
    gevent >=25.0.0
    gevent-websocket >=0.10.1

packages = find_namespace:
include_package_data = true
zip_safe = false

[options.package_data]
supysonic.emo =
    strict_v2_conformance.json
    strict_v2_registration_descriptor.json

[options.packages.find]
include = supysonic*

[options.entry_points]
console_scripts =
    supysonic-cli = supysonic.cli:main
    supysonic-daemon = supysonic.daemon:main
    supysonic-server = supysonic.server:main

[options.data_files]
share/man/man1 = man/*.1
